# Linux-Alternative-Resolver

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: alternative_resolver.rs  lib.rs
core/src/impls/: alt_config_impl.rs  alternative_resolver_impl.rs  mod.rs
core/src/impls/errors/: error_combo_impl.rs  error_impl.rs
core/src/models/: alt_config.rs  link_group.rs  link_item.rs  link_path.rs
core/src/models/errors/: error.rs  error_combo.rs  mod.rs
core/src/traits/: alt_config_persistence.rs  link_group_search.rs  link_item_search.rs  mod.rs
dedicated_test/: Cargo.toml
dedicated_test/src/: main.rs
dedicated_test/src/tests/: mod.rs
dedicated_test/src/tests/host_test/: mod.rs
dedicated_test/src/tests/predefined_test/: mod.rs
register/: Cargo.toml
register/src/: lib.rs
register/src/impls/: alt_config_impl.rs  link_group_impl.rs  link_item_impl.rs  link_path_impl.rs  mod.rs
register/src/traits/: alt_config_register.rs  group_register.rs  item_register.rs  mod.rs  path_register.rs
shared/: Cargo.toml
shared/src/common_models/: mod.rs
shared/src/common_models/impls/: alt_config_impl.rs  link_group_impl.rs  link_item_impl.rs  mod.rs
shared/src/common_models/impls/errors/: error_combo_impl.rs  error_impl.rs  mod.rs
shared/src/common_models/models/: alt_config.rs  link_group.rs  link_item.rs  link_path.rs  mod.rs
shared/src/common_models/models/errors/: error.rs  error_combo.rs
shared/src/common_models/traits/: link_group_search.rs  link_item_search.rs  mod.rs
