[package]
name = "linux_alternative_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.147", optional = true, features = ["derive"] }
indexmap = { version = "~1.9.1", optional = false }

[features]
serde = ["dep:serde", "indexmap/serde"]