[package]
name = "linux_alternative_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux_alternative_resolver_shared = { path = "../shared" }
serde = { version = "~1.0.147", optional = true, features = ["derive"] }
indexmap = { version = "~1.9.1", optional = false, features = ["std"] }

[features]
serde = ["dep:serde", "indexmap/serde"]