[package]
name = "linux_alternative_resolver"
authors = ["Seungwoo Yu <seungwoyu2000@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux_alternative_resolver_shared = { path = "../shared" }
serde = { version = "~1.0.152", optional = true, features = ["derive"] }
indexmap = { version = "~1.9.2", optional = false, features = ["std"] }

[features]
serde = ["dep:serde", "indexmap/serde", "linux_alternative_resolver_shared/serde"]
