[package]
name = "linux_alternative_resolver_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.147" }
serde_json = "1.0.87"
indexmap = { version = "~1.9.1", optional = false, features = ["std"] }
linux_alternative_resolver = { path = "../core", features = ["serde"] }
linux_alternative_resolver_shared = { path = "../shared", features = ["serde"] }
linux_alternative_resolver_register = { path = "../register" }