[package]
name = "linux_alternative_resolver_test"
authors = ["Seungwoo Yu <seungwoyu2000@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0.152" }
serde_json = "1.0.91"
indexmap = { version = "~2.6.0", optional = false, features = ["std"] }
linux_alternative_resolver = { path = "../core", features = ["serde"] }
linux_alternative_resolver_register = { path = "../register" }
