[package]
name = "linux_alternative_resolver_register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux_alternative_resolver_shared = { path = "../shared" }
serde_json = { version = "~1.0.89" }
indexmap = { version = "~1.9.1", features = ["std"] }